[gd_scene load_steps=12 format=3 uid="uid://bxni15cxxxvf6"]

[ext_resource type="Script" path="res://enemies/Enemy.gd" id="1"]
[ext_resource type="PackedScene" path="res://managers/KinematicGravity.tscn" id="2"]
[ext_resource type="PackedScene" path="res://enemies/ai/SimpleChaseAI.tscn" id="3"]
[ext_resource type="PackedScene" path="res://managers/DamageArea.tscn" id="4"]
[ext_resource type="PackedScene" path="res://assets/glb/enemies/enemyrocky.tscn" id="5"]
[ext_resource type="PackedScene" path="res://managers/HealthBar3D.tscn" id="6"]
[ext_resource type="PackedScene" path="res://managers/HitCountSpawner.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://biptl74aa1pn" path="res://managers/SoundManager.tscn" id="8"]
[ext_resource type="AudioStream" uid="uid://t52bfn76pcpc" path="res://assets/audio/sfx/damage_stone.ogg" id="9"]

[sub_resource type="BoxShape3D" id="1"]

[sub_resource type="BoxShape3D" id="2"]
size = Vector3(0.549906, 0.795306, 2)

[node name="EnemyRocky" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1")
hp = 6

[node name="HealthBar3D" parent="." instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.14724, 0)

[node name="KinematicGravity" parent="." instance=ExtResource("2")]

[node name="SimpleChaseAI" parent="." instance=ExtResource("3")]
chase_speed = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.260022, 0)
shape = SubResource("1")

[node name="HitCountSpawner" parent="." instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9, 0)

[node name="Graphics" parent="." instance=ExtResource("5")]

[node name="DamageAreaRight" parent="." instance=ExtResource("4")]
transform = Transform3D(0.3, 0, 0, 0, 1.2499, 0, 0, 0, 0.5, 0.579951, 0.26, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageAreaRight"]
shape = SubResource("2")

[node name="DamageAreaLeft" parent="." instance=ExtResource("4")]
transform = Transform3D(0.3, 0, 0, 0, 1.25, 0, 0, 0, 0.5, -0.579951, 0.26, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageAreaLeft"]
shape = SubResource("2")

[node name="DamageAreaTop" parent="." instance=ExtResource("4")]
transform = Transform3D(1.8, 0, 0, 0, 0.25, 0, 0, 0, 0.5, 0, 0.88, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageAreaTop"]
shape = SubResource("2")

[node name="FloorCheckRight" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.55, 0, 0)
target_position = Vector3(0, -0.7, 0)

[node name="FloorCheckLeft" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.55, 0, 0)
target_position = Vector3(0, -0.7, 0)

[node name="SoundManager" parent="." instance=ExtResource("8")]
damage_sounds = Array[AudioStream]([ExtResource("9")])
